v43ftrsize mi dant ajoute a list bug pour le overflow regle

--- a/views/asset/css/list.css
+++ b/views/asset/css/list.css
@@ -111,8 +111,6 @@ tbody td{
 }
 .td4Description{
     overflow: auto;
-    display: flex;
-    align-items: center;
     height: 45px;
 }
 .td3, .td4{
